---
source: crates/adl-syntax/tests/snapshots.rs
expression: "snapshot_for(\"legacy_parser/tests/golden/bad_syntax.adl\")"
---
File
  Object kw=object name=jets @1:1
    Take kw=take src=Jet @2:3
  Region kw=region name=SR @4:1
    RegionRef name=selct @5:3
---- diagnostics ----
error: `selct` is not a statement keyword
  --> legacy_parser/tests/golden/bad_syntax.adl:5:3
  |
5 |   selct MET > 100
  |   ^^^^^ unknown statement
  = help: did you mean `select`?
